fix mobile layout because apparently images stretch idk

--- a/css/section.css
+++ b/css/section.css
@@ -2,6 +2,7 @@
 {
     padding-top: 2vw;
     display: flex;
+    
     flex-direction: row;
     flex-wrap: wrap;
     pointer-events:none;
@@ -40,13 +41,14 @@
 @media screen and (max-width: 900px) {
     .entry
     {
+        justify-content: space-between;
         width: 50%;
         height: 300px;
     }
     .entry > img
     {
-        width: 30vw;
-        left: 5vw;
+        display: block;
+        width: 250px;
     }
     .entry > p
     {
@@ -54,3 +56,30 @@
         font-size: 20px;
     }
 }
+
+@media screen and (max-width: 600px) {
+    .entry
+    {
+        justify-content: space-between;
+        width: 100%;
+        height: 300px;
+    }
+    .entry > img
+    {
+        display: block;
+        width: 350px;
+        height: calc(350px * 9/16);
+        left:auto;
+        text-align: center;
+        
+    }
+    .entry > p
+    {
+        text-align: center;
+        
+        top: 180px;
+        font-size: 20px;
+        right:50px;
+    }
+}
+
